--- a/zk_moloch/Makefile
+++ b/zk_moloch/Makefile
@@ -2,7 +2,7 @@ build:
 	RUST_BACKTRACE=1 zargo build
 
 publish:
-	zargo publish --network rinkeby --instance default
+	zargo publish -vv --network rinkeby --instance default
 
 list:
 	zargo download --network rinkeby --list | grep -v constant_price
