--- a/zk_moloch/Makefile
+++ b/zk_moloch/Makefile
@@ -1,5 +1,8 @@
 build:
 	RUST_BACKTRACE=1 zargo build
 
+publish:
+	zargo publish -vv --network rinkeby --instance default
+
 list:
 	zargo download --network rinkeby --list | grep -v constant_price
